still fixing overlapped boxes on findagame page

--- a/acronymgame/src/pages/FindaGame.css
+++ b/acronymgame/src/pages/FindaGame.css
@@ -7,11 +7,14 @@
 
 .container{
   margin: 0 auto;
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: row;
     vertical-align: text-top;
     height : 700px;
+    width: 60%;
+    left: 50%;
+    transform: translate(-50%, 0);
 
 }
 
